[tool.poetry]
name = "rascal"
version = "0.1.0"
description = ""
license = "BSD"
readme = "README.md"
authors = ["Josh Veitch-Michaelis <j.veitchmichaelis@gmail.com>"]
homepage = "https://github.com/jveitchmichaelis/rascal"
documentation = "https://rascal.readthedocs.io/en/latest/?badge=latest"
repository = "https://github.com/jveitchmichaelis/rascal"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.1"
scipy = "^1.5.2"
pynverse = "^0.1.4"
matplotlib = "^3.3.0"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
