[tool.poetry]
name = "rascal"
version = "0.3.0"
description = ""
license = "BSD"
readme = "README.md"
authors = ["Josh Veitch-Michaelis <j.veitchmichaelis@gmail.com>"]
homepage = "https://github.com/jveitchmichaelis/rascal"
documentation = "https://rascal.readthedocs.io/en/latest/?badge=latest"
repository = "https://github.com/jveitchmichaelis/rascal"

[tool.poetry.dependencies]
astropy = "^4.0"
python = "^3.6"
numpy = "^1.16"
scipy = "^1.3.3"
pynverse = "^0.1.4"
matplotlib = "^3.0.3"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.masonry.api"
