[build-system]
requires = ["poetry>=1.1", "setuptools >= 60.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--verbose -x --timeout 120 --durations=0 --disable-warnings -p no:warnings"
testpaths = [
    "test"
]