[metadata]
name = rascal
version = 0.3.3
license = BSD-3-Clause
license_files = LICENSE
description = The Pyhton Automated Wavelenmgth Calibrator.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Josh Veitch-Michaelis, Marco C Lam
author_email = j.veitchmichaelis@gmail.com, lam@mail.tau.ac.il
maintainer = Josh Veitch-Michaelis, Marco C Lam
maintainer_email = j.veitchmichaelis@gmail.com, lam@mail.tau.ac.il
url = https://rascal.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/jveitchmichaelis/rascal
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    astropy>=4.0
    numpy>=1.16
    scipy>=1.3.3
    pynverse>=0.1.4
    matplotlib>=3.0.3
    tqdm>=4.48.0
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8
