[metadata]
name = rascal
version = 0.4.0
license = BSD-3-Clause
license_files = LICENSE
description = The Pyhton Automated Wavelenmgth Calibrator.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Josh Veitch-Michaelis, Marco C Lam
author_email = j.veitchmichaelis@gmail.com, lam@mail.tau.ac.il
maintainer = Josh Veitch-Michaelis, Marco C Lam
maintainer_email = j.veitchmichaelis@gmail.com, lam@mail.tau.ac.il
url = https://rascal.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/jveitchmichaelis/rascal
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    astropy>=4.0
    numpy>=1.16
    scipy>=1.3.3
    matplotlib>=3.0.3
    tqdm>=4.48.0
    kaleido>=0.2
    dotmap>1.3
    pyyaml>=6.0
    omegaconf>=2.3.0
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8
    pytest-timeout>=2.1

[options.packages.find]
where=src